[FIX] Fix permission immediately after tomcat7 build download

--- a/tasks/tomcat7/deploy.yml
+++ b/tasks/tomcat7/deploy.yml
@@ -124,8 +124,13 @@
     mode: u=rwx,g=rx,o=
   register: get_url_build
   notify:
-    - "steamengine fixpermissions"
     - "steamengine restart"
+  tags:
+    - steamengine_deploy_tomcat7
+
+- name: "Fix permissions"
+  command: "/{{ steamengine_project_name }}/bin/steamengine fixpermissions"
+  when: get_url_build.changed
   tags:
     - steamengine_deploy_tomcat7
 
@@ -140,5 +145,7 @@
       tags:
         - steamengine_deploy
         - steamengine_deploy_tomcat7
+  notify:
+    - "steamengine fixpermissions"
   tags:
     - steamengine_deploy_tomcat7
