--- a/molecule/play/playbook.yml
+++ b/molecule/play/playbook.yml
@@ -12,7 +12,10 @@
         steamengine_project_name: play2_test
         steamengine_project_type: play
         steamengine_build_url: https://delivery.steamulo.org/SteamEngineV2_tests/play2_test.zip
-        steamengine_build_checksum: sha1:3769ec0f24780da7969846f4a697df405feeaf80
+        steamengine_build_checksum: sha1:1647db0e96df9da3a3ecdc60c425b720a646a670
+        steamengine_project_configuration_base_name: "application"
         steamengine_project_configuration:
-          server:
-            port: 8085
+          play:
+            http:
+              secret:
+                key: "azfafzefezfbzelgbzebfganfdmazofnzmoenfoazen"
