[FIX] added permissions for play + fix permissions error on tomcat7

--- a/tasks/play/deploy.yml
+++ b/tasks/play/deploy.yml
@@ -30,6 +30,8 @@
 - name: Create tmp directory
   file:
     path: "{{ steamengine_project_root_path_tmp }}"
+    owner: "{{ steamengine_project_user }}"
+    group: "{{ steamengine_app_user }}"
     state: directory
     mode: 0755
   when: get_url_build.changed
@@ -37,13 +39,17 @@
 - name: Create destination directory
   file:
     path: "{{ steamengine_project_root_path_web }}"
+    owner: "{{ steamengine_project_user }}"
+    group: "{{ steamengine_app_user }}"
     state: directory
-    mode: 0755
+    mode: u=rwx,g=rx,o=
 
 - name: Unarchive build
   unarchive:
     src: "{{ steamengine_project_root_path }}/project.zip"
     dest: "{{ steamengine_project_root_path_tmp }}"
+    owner: "{{ steamengine_project_user }}"
+    group: "{{ steamengine_app_user }}"
     remote_src: true
     list_files: true
   register: front_static_unzip_output
