[CLEAN] permissions mode format

--- a/tasks/play/deploy.yml
+++ b/tasks/play/deploy.yml
@@ -33,7 +33,7 @@
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
     state: directory
-    mode: 0755
+    mode: u=rw,g=r,o=
   when: get_url_build.changed
 
 - name: Create destination directory
@@ -52,6 +52,7 @@
     group: "{{ steamengine_app_user }}"
     remote_src: true
     list_files: true
+    mode: u=rwx,g=rx,o=
   register: front_static_unzip_output
   when: get_url_build.changed
   tags:
@@ -84,5 +85,5 @@
   file:
     path: "{{ steamengine_project_root_path_web }}/bin/{{ steamengine_play2_run_script }}"
     state: file
-    mode: 0755
+    mode: u=rwx,g=rx,o=x
   when: get_url_build.changed
