--- a/tasks/tomcat7/asserts.yml
+++ b/tasks/tomcat7/asserts.yml
@@ -6,3 +6,9 @@
   when: steamengine_build_url is defined
   tags:
     - steamengine_deploy_tomcat7
+
+- name: Verify conf sources
+  assert:
+    that: steamengine_project_configuration_external_path is undefined or steamengine_project_configuration is undefined
+  tags:
+    - steamengine_deploy_tomcat7
