--- a/tasks/springboot/asserts.yml
+++ b/tasks/springboot/asserts.yml
@@ -6,3 +6,9 @@
   when: steamengine_build_url is defined
   tags:
     - steamengine_deploy_springboot
+
+- name: Verify conf sources
+  assert:
+    that: steamengine_project_configuration_template_path is undefined or steamengine_project_configuration is undefined
+  tags:
+    - steamengine_deploy_springboot
