[FIX] changed scenario name

--- a/molecule/tomcat7_template_conf/molecule.yml
+++ b/molecule/tomcat7_template_conf/molecule.yml
@@ -17,7 +17,7 @@ provisioner:
   lint:
     name: ansible-lint
 scenario:
-  name: tomcat7
+  name: tomcat7_template_conf
 verifier:
   name: testinfra
   options:
