[IMPR] check if build is not empty

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -40,7 +40,7 @@
     apply:
       tags:
         - steamengine_deploy
-  when: steamengine_build_url is defined
+  when: steamengine_build_url is defined and steamengine_build_url != ''
   tags: always
 
 - include_tasks:
