--- a/tasks/springboot/deploy.yml
+++ b/tasks/springboot/deploy.yml
@@ -10,7 +10,7 @@
     group: "{{ steamengine_app_user }}"
     mode: u=rw,g=r,o=
   notify:
-    - "steamengine restart"
+    - "{{ steamengine_project_name }} restart"
   tags:
     - steamengine_deploy_springboot
 
@@ -23,7 +23,7 @@
     mode: u=rw,g=r,o=
   when: steamengine_project_configuration_template_path is defined
   notify:
-    - "steamengine restart"
+    - "{{ steamengine_project_name }} restart"
   tags:
     - steamengine_deploy_springboot
 
@@ -36,6 +36,6 @@
     group: "{{ steamengine_app_user }}"
     mode: 0750
   notify:
-    - "steamengine restart"
+    - "{{ steamengine_project_name }} restart"
   tags:
     - steamengine_deploy_springboot
