--- a/tasks/play/deploy.yml
+++ b/tasks/play/deploy.yml
@@ -61,11 +61,8 @@
   unarchive:
     src: "{{ steamengine_project_root_path }}/project.zip"
     dest: "{{ steamengine_project_root_path_tmp }}"
-    owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
     remote_src: true
     list_files: true
-    mode: u=rwx,g=rx,o=
   register: front_static_unzip_output
   when: get_url_build.changed
   tags:
@@ -76,6 +73,16 @@
   when: get_url_build.changed
   tags:
     - steamengine_deploy_play2
+
+- name: "Recursively change ownership of {{ steamengine_project_root_path_web }}"
+  file:
+    path: "{{ steamengine_project_root_path_web }}"
+    state: directory
+    recurse: yes
+    owner: "{{ steamengine_project_user }}"
+    group: "{{ steamengine_app_user }}"
+    mode: u=rwx,g=rx,o=
+  when: get_url_build.changed
 
 - name: Remove tmp directory
   file:
