[IMPR] change permission handling for tomcat and fix order in main task

--- a/tasks/play/deploy.yml
+++ b/tasks/play/deploy.yml
@@ -78,7 +78,7 @@
   file:
     path: "{{ steamengine_project_root_path_web }}"
     state: directory
-    recurse: yes
+    recurse: true
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rx,o=
