[IMPR] update to ansible 2.8.5 and molecule 2.22

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,11 +1,11 @@
 ---
 
 galaxy_info:
-  author: Elie Liabeuf
-  description: your description
+  author: Steamulo
+  description: Production grade installation and deployment workflow for nodejs, tomcat7, play, springboot and static files.
   company: Steamulo
   license: BSD
-  min_ansible_version: 2.4
+  min_ansible_version: 2.7
   platforms:
     - name: Ubuntu
       versions:
