--- a/tasks/include/update_from_archive.yml
+++ b/tasks/include/update_from_archive.yml
@@ -8,12 +8,14 @@
     list_files: true
   register: front_static_unzip_output
 
-- find:
+- name: Registring all existing files
+  find:
     paths: "{{ dest_path }}"
     recurse: true
   register: front_static_find_output
 
-- set_fact:
+- name: Registring new and old files
+  set_fact:
     front_static_old_files: "{{ front_static_find_output.files | map(attribute='path') | list | map('regex_replace', dest_path + '/', '' ) | list }}"
     front_static_new_files: "{{ front_static_unzip_output.files }}"
 
