--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -54,5 +54,5 @@
     apply:
       tags:
         - steamengine_deploy
-  when: steamengine_build_url is defined and steamengine_build_url != ''
+  when: steamengine_build_url is defined and steamengine_build_url
   tags: always
