--- a/requirements.txt
+++ b/requirements.txt
@@ -1,69 +1,89 @@
-ansible==2.7.9
-ansible-lint==3.4.23
+ansible==2.8.5
+ansible-lint==4.1.0
 anyconfig==0.9.7
-arrow==0.13.1
-asn1crypto==0.24.0
+arrow==0.15.2
+asn1crypto==1.2.0
+aspy.yaml==1.3.0
 atomicwrites==1.3.0
-attrs==19.1.0
+attrs==19.3.0
 backports.functools-lru-cache==1.5
 backports.ssl-match-hostname==3.7.0.1
-bcrypt==3.1.6
+bcrypt==3.1.7
 binaryornot==0.4.4
-Cerberus==1.2
-certifi==2019.3.9
-cffi==1.12.2
+Cerberus==1.3.1
+certifi==2019.9.11
+cffi==1.13.0
+cfgv==2.0.1
 chardet==3.0.4
-click==6.7
-click-completion==0.3.1
-colorama==0.3.9
-configparser==3.7.3
+Click==7.0
+click-completion==0.5.2
+colorama==0.4.1
+configparser==4.0.2
+contextlib2==0.6.0.post1
 cookiecutter==1.6.0
-cryptography==2.6.1
-docker-pycreds==0.4.0
+cryptography==2.7
+docker==4.1.0
+entrypoints==0.3
 enum34==1.1.6
-fasteners==0.14.1
-flake8==3.5.0
+fasteners==0.15
+flake8==3.7.8
 funcsigs==1.0.2
-future==0.17.1
-git-url-parse==1.2.1
+functools32==3.2.3.post2
+future==0.18.0
+futures==3.3.0
+git-url-parse==1.2.2
+identify==1.4.7
 idna==2.8
+importlib-metadata==0.23
+importlib-resources==1.0.2
 ipaddress==1.0.22
-Jinja2==2.10
+Jinja2==2.10.3
 jinja2-time==0.2.0
 MarkupSafe==1.1.1
 mccabe==0.6.1
-molecule==2.19.0
+molecule==2.22
 monotonic==1.5
 more-itertools==5.0.0
-paramiko==2.4.2
-pathlib2==2.3.3
-pathspec==0.5.9
-pbr==4.1.0
-pexpect==4.6.0
-pluggy==0.9.0
-poyo==0.4.2
-psutil==5.4.6
+nodeenv==1.3.3
+packaging==19.2
+paramiko==2.6.0
+pathlib2==2.3.5
+pathspec==0.6.0
+pbr==5.4.3
+pexpect==4.7.0
+pluggy==0.13.0
+poyo==0.5.0
+pre-commit==1.18.3
+psutil==5.6.3
 ptyprocess==0.6.0
 py==1.8.0
-pyasn1==0.4.5
-pycodestyle==2.3.1
+pycodestyle==2.5.0
 pycparser==2.19
-pyflakes==1.6.0
+pyflakes==2.1.1
 PyNaCl==1.3.0
-pytest==4.3.1
+pyparsing==2.4.2
+pytest==4.6.6
 python-dateutil==2.8.0
 python-gilt==1.2.1
-python-vagrant==0.5.15
-PyYAML==3.13
-requests==2.21.0
+PyYAML==5.1.2
+requests==2.22.0
+ruamel.ordereddict==0.4.14
+ruamel.yaml==0.16.5
+ruamel.yaml.clib==0.2.0
 scandir==1.10.0
+selinux==0.2.0
 sh==1.12.14
-six==1.11.0
-tabulate==0.8.2
-testinfra==1.16.0
+shellingham==1.3.1
+six==1.12.0
+tabulate==0.8.5
+testinfra==3.2.0
+toml==0.10.0
 tree-format==0.1.2
-urllib3==1.24.1
-websocket-client==0.55.0
-whichcraft==0.5.2
-yamllint==1.11.1
-docker==4.1.0
+typing==3.7.4.1
+urllib3==1.25.6
+virtualenv==16.7.6
+wcwidth==0.1.7
+websocket-client==0.56.0
+whichcraft==0.6.1
+yamllint==1.18.0
+zipp==0.6.0
