--- a/tasks/nodejs/deploy.yml
+++ b/tasks/nodejs/deploy.yml
@@ -1,5 +1,17 @@
 ---
 
+- name: Create configuration file
+  template:
+    src: "nodejs_pm2_ecosystem.json.j2"
+    dest: "{{ steamengine_conf_path }}/nodejs_pm2_ecosystem.json"
+    owner: "{{ steamengine_project_user }}"
+    group: "{{ steamengine_app_user }}"
+    mode: u=rw,g=r,o=
+  notify:
+    - "{{ steamengine_project_name }} restart"
+  tags:
+    - steamengine_deploy_nodejs
+
 - name: "Download build {{ steamengine_build_url }}"
   get_url:
     url: "{{ steamengine_build_url }}"
