--- a/tasks/nodejs/deploy.yml
+++ b/tasks/nodejs/deploy.yml
@@ -26,6 +26,10 @@
   tags:
     - steamengine_deploy_nodejs
 
+- name: "Is there a new build: {{ get_url_build.changed }}"
+  set_fact:
+    new_build_to_deploy: get_url_build.changed
+
 - name: Create pm2 directory
   file:
     path: "{{ steamengine_project_root_path }}/pm2"
@@ -40,7 +44,7 @@
   file:
     path: "{{ steamengine_project_root_path_web }}"
     state: absent
-  when: get_url_build.changed
+  when: new_build_to_deploy
   tags:
     - steamengine_deploy_nodejs
 
@@ -51,7 +55,7 @@
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rx,o=
     state: directory
-  when: get_url_build.changed
+  when: new_build_to_deploy
   tags:
     - steamengine_deploy_nodejs
 
@@ -60,7 +64,7 @@
     src: "{{ steamengine_project_root_path }}/project.zip"
     dest: "{{ steamengine_project_root_path_web }}"
     remote_src: true
-  when: get_url_build.changed
+  when: new_build_to_deploy
   tags:
     - steamengine_deploy_nodejs
 
