--- a/molecule/nodejs/playbook.yml
+++ b/molecule/nodejs/playbook.yml
@@ -9,7 +9,7 @@
         nodejs_install_npm_user: root
         nodejs_npm_global_packages:
           - "pm2"
-    - role: steamulo.steamengine
+    - role: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
       vars:
         steamengine_project_name: test_nodejs
         steamengine_project_type: nodejs
