--- a/molecule/static/playbook.yml
+++ b/molecule/static/playbook.yml
@@ -17,7 +17,7 @@
                   root /test_static/project_root/www;
                   try_files $uri /index.html =404;
               }
-    - role: steamulo.steamengine
+    - role: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
       vars:
         steamengine_project_name: test_static
         steamengine_project_type: static
