--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -21,6 +21,9 @@ steamengine_logrotate_scripts:
 # This is a global option to rsyslog, this affect all your rsyslog conf
 steamengine_disable_rsyslog_escape_control_characters: true
 
+steamengine_build_url_validate_certs: true
+steamengine_build_url_headers: {}
+
 # NODEJS
 steamengine_nodejs_entrypoint: "bin/www"
 steamengine_nodejs_cluster_mode: true
