--- a/tasks/play/deploy.yml
+++ b/tasks/play/deploy.yml
@@ -33,7 +33,9 @@
     checksum: "{{ steamengine_build_checksum }}"
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
-    mode: 0750
+    mode: u=rwx,g=rx,o=
+    headers: "{{ steamengine_build_url_headers }}"
+    validate_certs: "{{ steamengine_build_url_validate_certs }}"
   notify:
     - "{{ steamengine_project_name }} restart"
   register: get_url_build
