--- a/tasks/static/deploy.yml
+++ b/tasks/static/deploy.yml
@@ -8,6 +8,8 @@
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rx,o=
+    headers: "{{ steamengine_build_url_headers }}"
+    validate_certs: "{{ steamengine_build_url_validate_certs }}"
   register: get_url_build
   tags:
     - steamengine_deploy_static
