--- a/tasks/tomcat7/deploy.yml
+++ b/tasks/tomcat7/deploy.yml
@@ -139,6 +139,8 @@
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rx,o=
+    headers: "{{ steamengine_build_url_headers }}"
+    validate_certs: "{{ steamengine_build_url_validate_certs }}"
   register: get_url_build
   notify:
     - "{{ steamengine_project_name }} fixpermissions"
