--- a/molecule/tomcat7/playbook.yml
+++ b/molecule/tomcat7/playbook.yml
@@ -2,6 +2,10 @@
 - name: Converge
   hosts: instance
   become: true
+
+  pre_tasks:
+    - include_tasks: "../resources/setup_{{ ansible_os_family | lower }}.yml"
+
   roles:
     - role: lean_delivery.java
       vars:
